# nDTomo

./: .gitignore  CITATION.cff  Dockerfile  Installation_notes.txt  Integrator.bat  LICENSE.txt  MANIFEST.in  MultiTool.bat  README.md  env.yml  gitignore.gitignore  meta.yaml  nD_MultiTool.bat  ndtomo.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml  lint.yml  pypi-publish.yml  python-publish.yml  test-notebooks.yml  zenodo_release.yml
binder/: environment.yml  postBuild  requirements.txt
docs/: environment.yml  requirements.txt
docs/source/: ID15A_helperAPI.rst  IntegratorAPI.rst  MultiToolAPI.rst  acknowledgements.rst  api.rst  conf.py  examples.rst  index.rst  intro.rst  modules.rst  refs.rst  req.rst  sites.rst  tut_ID15A_helper.rst  tut_Integrator.rst  tut_MultiTool.rst  tutorial_nDTomo_GUI.rst
examples/CIFs/: Pt_243678.cif  Zn.cif
examples/maps/: catalyst_particles_large.tif
examples/notebooks/: SD2I_experimental.ipynb  SD2I_simulated.ipynb  example_tomo_tf_01.ipynb  example_tomo_tf_02.ipynb  example_tomo_tf_03.ipynb  example_tomo_tf_04.ipynb  tutorial_ct_recon_demo.ipynb  tutorial_peak_fitting.ipynb  tutorial_phantoms.ipynb
examples/patterns/: Discharged_C2_summed.xy  Patterns.h5
examples/scripts/: Acquisition.py  Clustering.py  (+12 more)
gcolab/: README.md  tutorial_ct_recon_demo.ipynb
nDTomo/: __init__.py  nD_Processing.py
nDTomo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shortcuts/: ID15Ahelper.bat  Integrator.bat  MultiTool.bat
tests/: test_segmentation.py  test_shapes3D.py
(+336 files in other folders)
